--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Sylvenas/lmap#readme",
   "dependencies": {
+    "@turf/turf": "^3.5.2",
     "antd": "^1.10.0",
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
@@ -28,6 +29,7 @@
     "esri-leaflet": "^2.0.1",
     "is-svg": "^2.0.1",
     "leaflet": "^1.0.0-rc.1",
+    "leaflet-draw": "^0.3.2",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.5",
