--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
   "homepage": "https://github.com/Sylvenas/lmap#readme",
   "dependencies": {
     "@turf/turf": "^3.5.2",
-    "antd": "^1.10.0",
+    "antd": "^2.1.0",
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
+    "babel-plugin-import": "^1.0.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "classnames": "^2.2.5",
@@ -29,7 +30,7 @@
     "esri-leaflet": "^2.0.1",
     "is-svg": "^2.0.1",
     "leaflet": "^1.0.0-rc.1",
-    "leaflet-draw": "^0.3.2",
+    "leaflet-draw": "^0.4.0",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.5",
@@ -41,5 +42,8 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
+  },
+  "devDependencies": {
+    "babel-plugin-import": "^1.0.1"
   }
 }
