--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "is-svg": "^2.0.1",
     "leaflet": "^1.0.0-rc.1",
     "leaflet-draw": "^0.4.0",
+    "rc-tween-one": "^0.11.9",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.5",
