--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "esri-leaflet": "^2.0.1",
     "is-svg": "^2.0.1",
     "leaflet": "^1.0.0-rc.1",
-    "leaflet-draw": "^0.4.0",
+    "leaflet-draw": "^0.4.7",
+    "moment": "^2.17.0",
     "rc-tween-one": "^0.11.9",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
